fix: SCROLLTOP  исправил z-index у кнопки на верх при открытии aside меню

--- a/src/Components/common/ButtonToTop/_ButtonToTop.module.scss
+++ b/src/Components/common/ButtonToTop/_ButtonToTop.module.scss
@@ -12,7 +12,7 @@
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
-	z-index: 20;
+	z-index: 10;
 	background-color: $color-btn-black;
 	border-radius: 50%;
 	transition: background-color 200ms ease-in-out;
